--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Nehemias's homepage
-description: Code and assets for my personal website at https://nehemiasfeliz.com
+description: Nehemias Feliz personal webpage
